kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: examen-26
  labels:
    name: examen-26
