kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-sabrine
  namespace: examen-26
  labels:
    app: portfolio-sabrine
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-sabrine
  template:
    metadata:
      labels:
        app: portfolio-sabrine
    spec:
      containers:
      - name: portfolio
        image: YOUR_DOCKERHUB_USERNAME/portfolio-sabrine:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
