kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-sabrine-service
  namespace: examen-26
  labels:
    app: portfolio-sabrine
spec:
  type: NodePort
  selector:
    app: portfolio-sabrine
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
    nodePort: 30080
